--- a/Project One/Project One Notes Updated.org
+++ b/Project One/Project One Notes Updated.org
@@ -27,19 +27,21 @@
   - opcode_t opcode
   -
 * no_dep asm
-LW	R1 0(R0)
-ADD	R2 R3 R4
-ADDI	R3 R3 10
-SUB	R4 R4 R1
-SW  	R2 0(R0)
-ADD	R1 R2 R3
-SW	R4 4(R0)
-ADD	R5 R5 R6
-LW	R6 4(R0)
-EOP
++ LW	R1 0(R0)
++ ADD	R2 R3 R4
++ ADDI	R3 R3 10
++ SUB	R4 R4 R1
++ SW  	R2 0(R0)
++ ADD	R1 R2 R3
++ SW	R4 4(R0)
++ ADD	R5 R5 R6
++ LW	R6 4(R0)
++ EOP
 * Highlevel (from lecture)
-** Simulate the life of each instruction clock cycle by clock cycle
++ Simulate the life of each instruction clock cycle by clock cycle
 ** Assembly file loads into simulator
+  - Special purpose register show the value of the register at the beginning of
+    the stage
 *** What to do with the assembly file
 + At the end of clock cycle 0:
   - Instruction 1 should be in ID stage
@@ -48,7 +50,10 @@ EOP
   - Instruction 1 should be in EXE stage
   - Instruction 2 should be in ID stage
   - Instruction 3 should be in IF stage
-+
++ At the end of clock cycle 3
+  - Instruction 1 should be in MEM stage
+  - Instruction 2 should be in ID stage
+  - Instruction 3 should be in IF stage
 
 ** Simulator outputs:
 + Values in register file
@@ -102,6 +107,7 @@ EOP
       - has field NPC
     + EX/MEM
     + MEM/WB
+     #+BEGIN_SRC
     void run(unsigned cycles){
       for( number of clock cylces ){
           /*IF Single Cycle*/
@@ -111,6 +117,7 @@ EOP
           /*WB* Single Cycle*/
       }
     }
+      #+END_SRC
 ** Functions to init, terminate, and clear simulator
 + sim_pip/~sim_pip
 + reset
