--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -221,3 +221,15 @@ executeNeeded++;
   - if/id.pc is incremented
   - if/id id/ex.npc is /
   - What does this mean????
+* ASMs
+** no_dep
+LW	R1 0(R0) -> R1 = 10
+ADD	R2 R3 R4 -> R2 = 3 + 4 = 7
+ADDI	R3 R3 10 -> R3 = 3 + 10 = 13
+SUB	R4 R4 R1 -> R4 = 10 - 4 = 6
+SW  	R2 0(R0) -> 7 -> [R0], 7->data_memory[0]
+ADD	R1 R2 R3 -> R1 = 7 + 13 -> = 20
+SW	R4 4(R0) -> 6 -> data_memory[4]
+ADD	R5 R5 R6 -> R5 = 5 + 6
+LW	R6 4(R0) -> R6 = data_memory[4]
+EOP
