--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -28,19 +28,6 @@
 + instruction_t is a struct with the following fields
   - opcode_t opcode
   -
-* no_dep asm
-#+BEGIN_SRC :tangle yes :lang assembly
- LW	R1 0(R0)
- ADD	R2 R3 R4
- ADDI	R3 R3 10
- SUB	R4 R4 R1
- SW  	R2 0(R0)
- ADD	R1 R2 R3
- SW	R4 4(R0)
- ADD	R5 R5 R6
- LW	R6 4(R0)
- EOP
-#+END_SRC
 * Highlevel (from lecture)
 + Simulate the life of each instruction clock cycle by clock cycle
 ** Assembly file loads into simulator
@@ -212,7 +199,7 @@ executeNeeded++;
 }
 #+END_SRC
 *** Execute
-* Do tomorrow
+* Do Today
 + Add logic to only pass instructionary necessary parameters to sp registers
   for example:
   + LW someReg somReg has A, IMM, NPC
@@ -221,3 +208,7 @@ executeNeeded++;
   + Conditionals have A and imm
   + ADD/SUB/XOR have A, B
   + ADDI/SUBI have A, Immediate
++ Control hazards:
+  - Target is computed in execution stage
+  - Require 2 stalls
+  - Processor fetches the same instruction unitl the hazard is resolved
