--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -226,7 +226,7 @@ executeNeeded++;
 LW	R1 0(R0) -> R1 = 10
 ADD	R2 R3 R4 -> R2 = 3 + 4 = 7
 ADDI	R3 R3 10 -> R3 = 3 + 10 = 13
-SUB	R4 R4 R1 -> R4 = 10 - 4 = 6
+SUB	R4 R4 R1 -> R4 = 10 - 4 (R4 should be A, R1 should be B)
 SW  	R2 0(R0) -> 7 -> [R0], 7->data_memory[0]
 ADD	R1 R2 R3 -> R1 = 7 + 13 -> = 20
 SW	R4 4(R0) -> 6 -> data_memory[4]
