--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -233,3 +233,19 @@ SW	R4 4(R0) -> 6 -> data_memory[4]
 ADD	R5 R5 R6 -> R5 = 5 + 6
 LW	R6 4(R0) -> R6 = data_memory[4]
 EOP
+** control_dep
+- Branches have labels
+- label instruction address can be found by iterating through the labels in
+  instruction memory
+- Once label is found, save index
+- NPC
+XOR	R0 R0 R0   -> R0 = 0
+ADD	R1 R0 R0   -> R1 = 0
+ADDI	R2 R0 6 -> R2 = 6
+T1:	LW	R3 0(R1)   -> R3 = 0
+ADD	R3 R3 R5
+SUBI	R2 R2 1
+SW	     R3 0(R1)
+ADDI 	R1 R1 4
+BNEZ	R2 T1
+EOP
