--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -233,6 +233,21 @@ SW	R4 4(R0) -> 6 -> data_memory[4]
 ADD	R5 R5 R6 -> R5 = 5 + 6
 LW	R6 4(R0) -> R6 = data_memory[4]
 EOP
+** data_dep1 (Test Case 2)
+
+#+END_SRC#+BEGIN_SRC assembly
+ADD	R1 R2 R3 -> R1 = R2 + R3
+SUB	R4 R1 R5 -> R4 = R1 - R5
+ADDI	R4 R4 10 -> R4 = R4 + 10
+ADD	R4 R1 R6 -> R4 = R1 + R6
+SUB	R6 R5 R2 -> R6 = R5 - R2
+ADD	R3 R4 R1 -> R3 = R3 + R1
+EOP
+#+END_SRC
+- dep on R1 in second instruction (Hazard)
+- dep on R4 in third instruction (Hazard)
+- dep on R1 in fourth instruction (Not a hazard, cleared by first R1 dep)
+- dep on R4 and R1 in 5th instruction (Neither are hazards, already cleared)
 * Data Dependencies
 - Output Dependencies
 - Anti Dependencies
