--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -248,6 +248,18 @@ EOP
 - dep on R4 in third instruction (Hazard)
 - dep on R1 in fourth instruction (Not a hazard, cleared by first R1 dep)
 - dep on R4 and R1 in 5th instruction (Neither are hazards, already cleared)
+** data_dep2 (Test Case 3)
+1 LW	R1 0(R0)
+2 SUB	R4 R1 R5
+3 SW	R4 0(R0)
+4 ADDI	R5 R4 10
+5 ADD	R4 R1 R6
+6 SUB	R6 R5 R2
+7 EOP
+- Flow dep on instruction 2 (R1), will clear at memory stage?
+- Flow dep on instruction 3 (R4), will clear at write back stage
+- Flow dep on instruction 4 (R4), will be cleared by previous dep
+- Flow dep on instruction 6 (R5), clear at writeback stage
 * Data Dependencies
 - Output Dependencies
 - Anti Dependencies
