--- a/Project_One/Project One Notes Updated.org
+++ b/Project_One/Project One Notes Updated.org
@@ -236,12 +236,12 @@ EOP
 ** data_dep1 (Test Case 2)
 
 #+END_SRC#+BEGIN_SRC assembly
-ADD	R1 R2 R3 -> R1 = R2 + R3
-SUB	R4 R1 R5 -> R4 = R1 - R5
-ADDI	R4 R4 10 -> R4 = R4 + 10
-ADD	R4 R1 R6 -> R4 = R1 + R6
-SUB	R6 R5 R2 -> R6 = R5 - R2
-ADD	R3 R4 R1 -> R3 = R3 + R1
+ADD	R1 R2 R3 -> R1 = R2 + R3 = 2 + 3 = 5 *R1 = 5*
+SUB	R4 R1 R5 -> R4 = R1 - R5 = 5 - 5 = 0 *R4 = 0* Stall 2
+ADDI	R4 R4 10 -> R4 = R4 + 10 =  0 + 10 = *R4 = 10* Stall 2
+ADD	R4 R1 R6 -> R4 = R1 + R6 = 5 + 6 = *R4 = 11* Stall 0
+SUB	R6 R5 R2 -> R6 = R5 - R2 = 5 - 2 = *R6 = 3* Stall 0
+ADD	R3 R4 R1 -> R3 = R4 + R1 = 11 + 5 = *R3 = 16* Stall 1
 EOP
 #+END_SRC
 - dep on R1 in second instruction (Hazard)
