--- a/pipeline-simulator/project-notes.org
+++ b/pipeline-simulator/project-notes.org
@@ -1,7 +1,4 @@
-#+TITLE: Project One Notes
-* Due Date
-+ 2/21 Integer Pipeline
-+ 2/25 Floating Point Pipeline
+#+TITLE:project-one-notes
 * Goal
 + Design and implement c/c++ cycle-accurate simulator of a 5-stage MIPS-like pipelined processor
 * Testing
